ra-401: vacancy dates change should not alter wage, unless needed

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -54,11 +54,14 @@
             @Html.HiddenFor(m => m.Wage.Type)
             @Html.HiddenFor(m => m.Wage.Classification)
             @Html.HiddenFor(m => m.Wage.CustomType)
+            @Html.HiddenFor(m => m.Wage.PresetText)
             @Html.HiddenFor(m => m.Wage.Amount)
             @Html.HiddenFor(m => m.Wage.AmountLowerBound)
             @Html.HiddenFor(m => m.Wage.AmountUpperBound)
             @Html.HiddenFor(m => m.Wage.Unit)
+            @Html.HiddenFor(m => m.Wage.RangeUnit)
             @Html.HiddenFor(m => m.Wage.WageTypeReason)
+            @Html.HiddenFor(m => m.Wage.HoursPerWeek)
             @Html.HiddenFor(m => m.WageComment)
         }
         else
