--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -4328,9 +4328,15 @@ input::-webkit-inner-spin-button {
 .search-bar {
   overflow: hidden;
   position: relative; }
+  .search-bar select {
+    position: absolute;
+    left: 0px;
+    width: 75px;
+    height: 38px; }
   .search-bar .search-input-wrapper {
     float: left;
     box-sizing: border-box;
+    padding-left: 74px;
     padding-right: 47px;
     width: 100%; }
     .search-bar .search-input-wrapper input[type="text"] {
@@ -4339,6 +4345,14 @@ input::-webkit-inner-spin-button {
       padding-left: 7px;
       box-sizing: border-box;
       width: 100%; }
+  .search-bar .reset-search {
+    position: absolute;
+    overflow: hidden;
+    right: 53px;
+    top: 8px; }
+    .search-bar .reset-search span {
+      position: absolute;
+      left: -5000px; }
   .search-bar .search-btn {
     position: absolute;
     overflow: hidden;
