--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -96,12 +96,12 @@
                     <div id="custom-wage-panel" class="toggle-content blocklabel-content">
                         <fieldset class="form-group inline-fixed">
                             @* ReSharper disable once Html.IdNotResolved *@
-                            <label for="custom-wage-fixed" class="block-label vertically-stacked" data-target="custom-wage-fixed-panel">
+                            <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
                                 @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
                                 Fixed wage
                             </label>
                             @* ReSharper disable once Html.IdNotResolved *@
-                            <label for="custom-wage-range" class="block-label vertically-stacked" data-target="custom-wage-range-panel">
+                            <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
                                 @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new {id = "custom-wage-range", aria_controls = "custom-wage-panel"})
                                 Wage range
                             </label>
