--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -72,44 +72,6 @@
                     <label class="form-label" for="weekly-wage">Wage</label>
                     <div class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.Type)))" data-editable-x="">
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label for="custom-wage" class="block-label vertically-stacked" data-target="custom-wage-panel">
-                            @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.Custom, new {id = "custom-wage", aria_controls = "wage-type-panel"})
-                            Custom wage
-                        </label>
-                        <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1">
-                            <fieldset class="form-group inline-fixed">
-                                @* ReSharper disable once Html.IdNotResolved *@
-                                <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
-                                    @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
-                                    Fixed wage
-                                </label>
-                                @* ReSharper disable once Html.IdNotResolved *@
-                                <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
-                                    @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
-                                    Wage range
-                                </label>
-                                @Html.ValidationMessageFor(m => m.Wage.CustomType)
-                            </fieldset>
-                            <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
-                                @Html.Label(WageViewModelMessages.AmountMessages.HelpText)
-                                <fieldset class="form-group inline-fixed">
-                                    £
-                                    @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                    @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
-                                </fieldset>
-                            </div>
-                            <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
-                                @Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText)
-                                <fieldset class="form-group inline-fixed">
-                                    £
-                                    @Html.FormTextFor(m => m.Wage.AmountLowerBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                    &nbsp;to&nbsp;£
-                                    @Html.FormTextFor(m => m.Wage.AmountUpperBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                    @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
-                                </fieldset>
-                            </div>
-                        </div>
-                        @* ReSharper disable once Html.IdNotResolved *@
                         <label for="national-minimum-wage" class="block-label vertically-stacked">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.NationalMinimum, new {id = "national-minimum-wage", aria_controls = "wage-type-panel"})
                             National Minimum Wage
@@ -120,20 +82,62 @@
                             National Minimum Wage for apprentices
                         </label>
                         @* ReSharper disable once Html.IdNotResolved *@
+                        <label for="custom-wage" class="block-label vertically-stacked" data-target="custom-wage-panel">
+                            @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.Custom, new { id = "custom-wage", aria_controls = "wage-type-panel" })
+                            Custom wage
+                        </label>
+                        <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
+                            <div class="nested-panel-div">
+                                <fieldset class="form-group inline-fixed">
+                                    @* ReSharper disable once Html.IdNotResolved *@
+                                    <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
+                                        @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
+                                        Fixed wage
+                                    </label>
+                                    @* ReSharper disable once Html.IdNotResolved *@
+                                    <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
+                                        @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                        Wage range
+                                    </label>
+                                    @Html.ValidationMessageFor(m => m.Wage.CustomType)
+                                </fieldset>
+                                <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
+                                    @Html.Label(WageViewModelMessages.AmountMessages.HelpText)
+                                    <fieldset class="form-group inline-fixed">
+                                        £
+                                        @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                        @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
+                                    </fieldset>
+                                </div>
+                                <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
+                                    @Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText)
+                                    <fieldset class="form-group inline-fixed">
+                                        £
+                                        @Html.FormTextFor(m => m.Wage.AmountLowerBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                        &nbsp;to&nbsp;£
+                                        @Html.FormTextFor(m => m.Wage.AmountUpperBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                        @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </div>
+                        <p style="clear: both;">or</p>
+                        @* ReSharper disable once Html.IdNotResolved *@
                         <label for="preset-text" class="block-label vertically-stacked" data-target="preset-text-panel">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.PresetText, new { id = "preset-text", aria_controls = "wage-type-panel" })
                             Choose a text description of the wage
                         </label>
                         @Html.ValidationMessageFor(m => m.Wage.Classification)
-                        <div id="preset-text-panel" class="toggle-content blocklabel-content nested-panel-1">
-                            <fieldset class="form-group inline-fixed">
-                                @Html.DropDownListFor(m => m.Wage.PresetText, Model.WageTextPresets)
-                            </fieldset>
-                            <fieldset class="form-group inline-fixed">
-                                @Html.Label(WageViewModelMessages.WageTypeReason.HelpText)
-                                @Html.FormTextAreaFor(m => m.Wage.WageTypeReason, WageViewModelMessages.WageTypeReason.LabelText, containerHtmlAttributes: new { @baseClassName = "form-group-compound" }, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, data_val_length = WageViewModelMessages.WageTypeReason.TooLongErrorText, data_val_regex = Whitelists.FreetextWhitelist.RegularExpression })
-                            </fieldset>
-                            @Html.ValidationMessageFor(m => m.Wage.WageTypeReason)
+                        <div id="preset-text-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
+                            <div class="nested-panel-div">
+                                <fieldset class="form-group inline-fixed">
+                                    @Html.DropDownListFor(m => m.Wage.PresetText, Model.WageTextPresets)
+                                </fieldset>
+                                <fieldset class="form-group inline-fixed">
+                                    @Html.Label(WageViewModelMessages.WageTypeReason.HelpText)
+                                    @Html.FormTextAreaFor(m => m.Wage.WageTypeReason, WageViewModelMessages.WageTypeReason.LabelText, containerHtmlAttributes: new { @baseClassName = "form-group-compound" }, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, data_val_length = WageViewModelMessages.WageTypeReason.TooLongErrorText, data_val_regex = Whitelists.FreetextWhitelist.RegularExpression })
+                                </fieldset>
+                            </div>
                         </div>
                     </div>
                 </div>
