--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -4214,7 +4214,7 @@ input::-webkit-inner-spin-button {
 label.vertically-stacked {
     display: block;
     float: left;
-    clear: both;
+    clear: left;
 }
 
 div.nested-panel-1 {
@@ -4223,7 +4223,10 @@ div.nested-panel-1 {
     border-left: 3px solid #999999;
     box-sizing: content-box;
     margin-left: 0px;
-    padding: 15px 0 50px 15px;
+}
+
+div.nested-panel-div {
+    margin-left: 10px;
 }
 
 .block-label {
