Fixing invalid link on vacancy preview page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_BulkUploadVacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_BulkUploadVacancyLinks.cshtml
@@ -2,5 +2,5 @@
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyLinksViewModel
 
     <p class="small-btm-margin">
-        @Html.RouteLink("Continue responding to candidates", RecruitmentRouteNames.BulkDeclineCandidates, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+        @Html.RouteLink("Continue responding to candidates", RecruitmentRouteNames.BulkDeclineCandidates, new RouteValueDictionary {{"VacancyApplicationsSearch.VacancyReferenceNumber", Model.VacancyReferenceNumber}}, new Dictionary<string, object> { {"class", "disp-block" } })
     </p>
