--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
@@ -25,7 +25,7 @@
             </h1>
         </div>
         <div class="grid grid-1-3" style="float: right">            
-            @if (Model.Mode == "bulkUpload")
+            @if (Model.Mode == VacancyViewModel.BulkUploadMode)
             {
                 @Html.Partial("DisplayTemplates/_BulkUploadVacancyLinks", new VacancyLinksViewModel(Model.VacancyReferenceNumber, Model.Status, Model.ApplicationCount, Model.VacancyType, Model.ApplicationPendingDecisionCount))
             }
