--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Domain.Raa.Interfaces.Repositories.Models
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @model BulkDeclineCandidatesViewModel
 
@@ -40,7 +41,7 @@
                     </p>
                     <br/>
                     <p class="font-xsmall">
-                        @Html.RouteLink("See full vacancy details", RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber, mode = "bulkUpload"}, new {@class = "account-link"})
+                        @Html.RouteLink("See full vacancy details", RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber, mode = VacancyViewModel.BulkUploadMode }, new {@class = "account-link"})
                     </p>
                     <br/>
                 </div>
