--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
@@ -4213,6 +4213,10 @@ div.nested-panel-1 {
     margin-left: 0px;
 }
 
+fieldset.nested-panel-2 {
+    margin-left: 10px;
+}
+
 .block-label {
   background: #ecedee;
   border: 1px solid #dee0e2;
