--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -87,39 +87,37 @@
                             Custom wage
                         </label>
                         <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
-                            <div class="nested-panel-div">
-                                <fieldset class="form-group inline-fixed">
-                                    @* ReSharper disable once Html.IdNotResolved *@
-                                    <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
-                                        @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
-                                        Fixed wage
-                                    </label>
-                                    @* ReSharper disable once Html.IdNotResolved *@
-                                    <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
-                                        @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
-                                        Wage range
-                                    </label>
-                                    @Html.ValidationMessageFor(m => m.Wage.CustomType)
+                            <fieldset class="nested-panel-2 form-group inline-fixed">
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
+                                    @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
+                                    Fixed wage
+                                </label>
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
+                                    @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                    Wage range
+                                </label>
+                                @Html.ValidationMessageFor(m => m.Wage.CustomType)
+                            </fieldset>
+                            <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
+                                <fieldset class="nested-panel-2 form-group inline-fixed">
+                                    <span class="clearfix">@Html.Label(WageViewModelMessages.AmountMessages.HelpText)</span>
+                                    £
+                                    @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                    @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
                                 </fieldset>
-                                <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
-                                    @Html.Label(WageViewModelMessages.AmountMessages.HelpText)
-                                    <fieldset class="form-group inline-fixed">
-                                        £
-                                        @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                        @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
-                                    </fieldset>
-                                </div>
-                                <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
-                                    @Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText)
-                                    <fieldset class="form-group inline-fixed @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.AmountLowerBound))
-                                              @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.AmountUpperBound))">
-                                        £
-                                        @Html.FormTextFor(m => m.Wage.AmountLowerBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                        &nbsp;to&nbsp;£
-                                        @Html.FormTextFor(m => m.Wage.AmountUpperBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
-                                        @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
-                                    </fieldset>
-                                </div>
+                            </div>
+                            <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
+                                <fieldset class="nested-panel-2 form-group inline-fixed @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.AmountLowerBound))
+                                            @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.AmountUpperBound))">
+                                    <span class="clearfix">@Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText)</span>
+                                    £
+                                    @Html.FormTextFor(m => m.Wage.AmountLowerBound, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-large", type = "tel", size = 12})
+                                    &nbsp;to&nbsp;£
+                                    @Html.FormTextFor(m => m.Wage.AmountUpperBound, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-large", type = "tel", size = 12})
+                                    @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
+                                </fieldset>
                             </div>
                         </div>
                         <p style="clear: both;">or</p>
@@ -130,15 +128,13 @@
                         </label>
                         @Html.ValidationMessageFor(m => m.Wage.Classification)
                         <div id="preset-text-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
-                            <div class="nested-panel-div">
-                                <fieldset class="form-group inline-fixed">
-                                    @Html.DropDownListFor(m => m.Wage.PresetText, Model.WageTextPresets)
-                                </fieldset>
-                                <fieldset class="form-group inline-fixed">
-                                    @Html.Label(WageViewModelMessages.WageTypeReason.HelpText)
-                                    @Html.FormTextAreaFor(m => m.Wage.WageTypeReason, WageViewModelMessages.WageTypeReason.LabelText, containerHtmlAttributes: new { @baseClassName = "form-group-compound" }, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, data_val_length = WageViewModelMessages.WageTypeReason.TooLongErrorText, data_val_regex = Whitelists.FreetextWhitelist.RegularExpression })
-                                </fieldset>
-                            </div>
+                            <fieldset class="nested-panel-2 form-group inline-fixed">
+                                @Html.DropDownListFor(m => m.Wage.PresetText, Model.WageTextPresets)
+                            </fieldset>
+                            <fieldset class="nested-panel-2 form-group inline-fixed @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.WageTypeReason))">
+                                @Html.Label(WageViewModelMessages.WageTypeReason.HelpText)
+                                @Html.FormTextAreaFor(m => m.Wage.WageTypeReason, WageViewModelMessages.WageTypeReason.LabelText, containerHtmlAttributes: new { @baseClassName = "form-group-compound" }, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, data_val_length = WageViewModelMessages.WageTypeReason.TooLongErrorText, data_val_regex = Whitelists.FreetextWhitelist.RegularExpression })
+                            </fieldset>
                         </div>
                     </div>
                 </div>
