ra-371: Show new drop down options for serco.

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -150,3 +150,7 @@ input[type="search"]::-webkit-search-decoration {
  .three-column li{      
   float:left;  
  }
+
+ .select2-container .select2-choice{
+     background:#F8F8F8
+ }
