Added provider details to unsuccessful application page

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
@@ -20,17 +20,9 @@
                     </span>
                 </div>
             </div>
-            <h2 class="heading-large">Next steps</h2>
-            <p>If you require further information please contact the training provider.</p>
-            <p>
-                For advice on how to ensure your application has a better chance of being
-                successful @Html.RouteLink("see the next steps page", @CandidateRouteNames.NextSteps).
-            </p>
-            <br />
-            <br />
-            @Html.RouteLink("Return to my applications", CandidateRouteNames.MyApplications, null, new { @class = "button" })
         </div>
     </section>
+
     <section class="grid grid-1-3 gov-border grey-background">
         <br />
         <div class="inner-block">
@@ -43,6 +35,53 @@
                 </p>
                 <br />
             </div>
+        </div>
+    </section>
+
+    <section class="section-border grid-wrapper" id="provider-info">
+        <div class="grid grid-2-3">
+            <h2 class="heading-large">Training provider</h2>
+            @if (Model.IsNasProvider)
+            {
+                <p id="vacancy-nas-provider">Training provider selection is currently in progress</p>
+            }
+            else
+            {
+                <div class="grid-wrapper">
+                    <div class="text grid grid-1-2">
+                        <h3 class="bold-small">Training provider</h3>
+                        <p id="vacancy-provider-name">@Model.ProviderName</p>
+
+                        @if (!Model.IsRecruitmentAgencyAnonymous && !string.IsNullOrWhiteSpace(Model.RecruitmentAgency))
+                        {
+                            <p id="recruitment-agency-name">Applications for this apprenticeship are being processed by @Model.RecruitmentAgency</p>
+                        }
+                    </div>
+
+                    @if (!string.IsNullOrWhiteSpace(Model.Contact))
+                    {
+                        <div class="text grid grid-1-2" style="padding-left: 30px;">
+                            <h3 class="bold-small">Contact</h3>
+                            <p id="vacancy-provider-contact" class="@Model.Contact.GetPreserveFormattingCssClass()">@Model.Contact</p>
+                        </div>
+                    }
+                </div>
+            }
+        </div>
+    </section>
+
+
+    <section class="grid grid-2-3">
+        <div class="inner-block-padr">
+            <h2 class="heading-large">Next steps</h2>
+            <p>If you require further information please contact the training provider.</p>
+            <p>
+                For advice on how to ensure your application has a better chance of being
+                successful @Html.RouteLink("see the next steps page", @CandidateRouteNames.NextSteps).
+            </p>
+            <br />
+            <br />
+            @Html.RouteLink("Return to my applications", CandidateRouteNames.MyApplications, null, new { @class = "button" })
         </div>
     </section>
 </div>
